Fix ledger ui z-index

--- a/src/popup/component/LedgerInfoModal/index.module.scss
+++ b/src/popup/component/LedgerInfoModal/index.module.scss
@@ -71,7 +71,7 @@
     padding: 12px 38px 20px;
     position: fixed;
     bottom: 0;
-    width: calc(100%);
+    width: calc(100% - 76px);
     background-color: white;
 
     animation: openModal 0.35s;
