--- a/src/popup/pages/LedgerPage/index.module.scss
+++ b/src/popup/pages/LedgerPage/index.module.scss
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 201;
 
     .innerContainer {
         width: 750px;
